Fixes to roster and journal: # ROSTER - fixed some of the spacing with role assignments # JOURNAL - added a sidebar for quickj access - and added sample image/text/header - added h3 style
css got some changes too

--- a/style.css
+++ b/style.css
@@ -144,6 +144,11 @@ h2 {
     font-style: italic;
 }
 
+h3 {
+    color: var(--accent);
+    font-size: 1.5em;
+}
+
 div.header {
     background-color: var(--secondary);
     position: fixed;
@@ -275,6 +280,7 @@ article.content {
     max-width: 1280px;
     text-align: left;
     padding: 65px 32px;
+    transition: margin-left .5s;
 }
 
 .roster {
@@ -330,13 +336,19 @@ article.content {
 }
 
 .roster .person .data .name h3 {
-    color: var(--darker-accent);
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: 700;
     font-size: 1.5em;
     text-align: center;
     margin: 10px 0 20px;
+}
+
+[data-theme="light"] .roster .person .data .name h3 {
+    color: var(--darker-accent);
+}
+[data-theme="dark"] .roster .person .data .name h3 {
+    color: var(--accent);
 }
 
 .roster .person .description {
@@ -490,3 +502,47 @@ article.content {
         transform: scaleY(1);
     }
 }
+
+#placeholder {
+    justify-content: center;
+    align-items: center;
+    
+}
+
+/*https://www.w3schools.com/howto/howto_js_sidenav.asp*/
+
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 100px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+  
